dataset1235/2025-2/1153765216/users/4118477972/executions/2052804200_359761547.log
== SUBMISSION (2025-09-02 19:22:44)
-- CODE: 
idade = int(input("digite sua idade:"))
print(idade)
if <= 2:
  print("nao_paga")
else:
  print("paga")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    if <= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    if <= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    if <= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    if <= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    if <= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    if <= 2:
       ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:21:13)
-- CODE: 
idade = int(input("digite sua idade:"))
print(idade)
if >= 2:
  print("paga")
else:
  print("nao_paga")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:23:41)
-- CODE: 
idade = int(input("digite sua idade:"))
print(idade)
if >= 2:
  print("paga")
else:
  print("nao_paga")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:24:57)
-- CODE: 
idade = int(input("digite sua idade:"))
print(idade)
if idade >= 2:
  print("paga")
else:
  print("nao_paga")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
paga
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
